--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 
 <body>
 
-<h1>Routing Internet Traffic to an Amazon S3 Bucket for Your Website</h1>
-
-<p>For more information, see 
-<a href="https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/getting-started.html">Getting Started with Amazon Route 53</a> 
-in the <emphasis>Amazon Route 53 Developer Guide</emphasis>.</p>
+<h1>Welcome to my website!</h1>
 
 </body>
 
